--- a/summer_clip/clip_searcher/runs_analysis/result_tables.ipynb
+++ b/summer_clip/clip_searcher/runs_analysis/result_tables.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +684,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Is taken from: https://github.com/gaopengcuhk/Tip-Adapter/blob/main/exp.log\n",
+    "\n",
+    "tip_adapter_results = pd.DataFrame([\n",
+    "    ('imagenet', 62.01, 65.51),\n",
+    "    ('sun397', 66.85, 71.47),\n",
+    "    ('oxford_pets', 88.14, 89.70),\n",
+    "    ('eurosat', 70.54, 84.54),\n",
+    "    ('caltech101', 90.18, 92.86),\n",
+    "    ('dtd', 60.93, 66.55),\n",
+    "    ('fgvc', 29.76, 35.55),\n",
+    "    ('food101', 77.83, 79.43),\n",
+    "    ('oxford_flowers', 89.89, 94.80),\n",
+    "    ('ucf101', 70.58, 78.03),\n",
+    "    ('stanford_cars', 66.77, 75.74),\n",
+    "], columns=('dataset', 'tip', 'tip-f'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Is taken from: https://docs.google.com/spreadsheets/d/12_kaFdD0nct9aUIrDoreY0qDunQ9q9tv/edit?usp=sharing&ouid=100312610418109826457&rtpof=true&sd=true\n",
+    "\n",
+    "coop_results = pd.DataFrame({\n",
+    "    'dataset': ['oxford_pets', 'oxford_flowers', 'fgvc', 'dtd', 'eurosat', 'stanford_cars', 'food101', 'sun397', 'caltech101', 'ucf101', 'imagenet'],\n",
+    "    'coop': [87.01, 94.51, 31.26, 63.58, 83.53, 73.36, 74.67, 69.26, 91.83, 75.71, 62.95]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upl_results = pd.DataFrame({\n",
+    "    'dataset': ['imagenet', 'caltech101', 'dtd', 'eurosat', 'fgvc', 'food101', 'oxford_flowers', 'oxford_pets', 'sun397', 'stanford_cars', 'ucf101'],\n",
+    "    'upl': [60.51, 89.94, 46.57, 54.83, 17.34, 77.58, 68.90, 88.28, 63.98, 62.13, 67.17]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Is taken from: https://docs.google.com/spreadsheets/d/1_d7nvKM4xlc1ryI8yk1yiI_KrY0t0P3qYaeuBL3__w8/edit#gid=1008533228\n",
+    "\n",
+    "svl_results = pd.DataFrame({\n",
+    "    'dataset': ['oxford_pets', 'oxford_flowers', 'fgvc', 'dtd', 'eurosat', 'stanford_cars', 'food101', 'sun397', 'caltech101', 'ucf101'],\n",
+    "    'svl': [87.9, 73.28, 12.42, 47.1, 66.28, 50.27, 78.43, 61.37, 88.64, 64.9]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -711,95 +774,155 @@
        "      <th>dataset</th>\n",
        "      <th>topk</th>\n",
        "      <th>zero_shot</th>\n",
+       "      <th>upl</th>\n",
+       "      <th>svl</th>\n",
+       "      <th>tip</th>\n",
+       "      <th>tip-f</th>\n",
+       "      <th>coop</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>sun397</td>\n",
+       "      <td>SUN397</td>\n",
        "      <td>60.06</td>\n",
        "      <td>56.84</td>\n",
+       "      <td>63.98</td>\n",
+       "      <td>61.37</td>\n",
+       "      <td>66.85</td>\n",
+       "      <td>71.47</td>\n",
+       "      <td>69.26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>dtd</td>\n",
+       "      <td>DTD</td>\n",
        "      <td>44.21</td>\n",
        "      <td>42.26</td>\n",
+       "      <td>46.57</td>\n",
+       "      <td>47.1</td>\n",
+       "      <td>60.93</td>\n",
+       "      <td>66.55</td>\n",
+       "      <td>63.58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>oxford_flowers</td>\n",
+       "      <td>Flowers102</td>\n",
        "      <td>69.14</td>\n",
        "      <td>65.98</td>\n",
+       "      <td>68.90</td>\n",
+       "      <td>73.28</td>\n",
+       "      <td>89.89</td>\n",
+       "      <td>94.80</td>\n",
+       "      <td>94.51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>eurosat</td>\n",
+       "      <td>EuroSAT</td>\n",
        "      <td>42.58</td>\n",
        "      <td>37.51</td>\n",
+       "      <td>54.83</td>\n",
+       "      <td>66.28</td>\n",
+       "      <td>70.54</td>\n",
+       "      <td>84.54</td>\n",
+       "      <td>83.53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>ucf101</td>\n",
+       "      <td>UCF101</td>\n",
        "      <td>60.03</td>\n",
        "      <td>57.34</td>\n",
+       "      <td>67.17</td>\n",
+       "      <td>64.9</td>\n",
+       "      <td>70.58</td>\n",
+       "      <td>78.03</td>\n",
+       "      <td>75.71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>caltech101</td>\n",
+       "      <td>Caltech101</td>\n",
        "      <td>87.26</td>\n",
        "      <td>83.98</td>\n",
+       "      <td>89.94</td>\n",
+       "      <td>88.64</td>\n",
+       "      <td>90.18</td>\n",
+       "      <td>92.86</td>\n",
+       "      <td>91.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>stanford_cars</td>\n",
+       "      <td>StanfordCars</td>\n",
        "      <td>57.05</td>\n",
        "      <td>55.63</td>\n",
+       "      <td>62.13</td>\n",
+       "      <td>50.27</td>\n",
+       "      <td>66.77</td>\n",
+       "      <td>75.74</td>\n",
+       "      <td>73.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>food101</td>\n",
+       "      <td>Food101</td>\n",
        "      <td>75.07</td>\n",
        "      <td>74.82</td>\n",
+       "      <td>77.58</td>\n",
+       "      <td>78.43</td>\n",
+       "      <td>77.83</td>\n",
+       "      <td>79.43</td>\n",
+       "      <td>74.67</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>oxford_pets</td>\n",
+       "      <td>OxfordPets</td>\n",
        "      <td>81.74</td>\n",
        "      <td>82.83</td>\n",
+       "      <td>88.28</td>\n",
+       "      <td>87.9</td>\n",
+       "      <td>88.14</td>\n",
+       "      <td>89.70</td>\n",
+       "      <td>87.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>fgvc</td>\n",
+       "      <td>FGVCAircraft</td>\n",
        "      <td>16.44</td>\n",
        "      <td>17.10</td>\n",
+       "      <td>17.34</td>\n",
+       "      <td>12.42</td>\n",
+       "      <td>29.76</td>\n",
+       "      <td>35.55</td>\n",
+       "      <td>31.26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>imagenet</td>\n",
+       "      <td>ImageNet</td>\n",
        "      <td>58.82</td>\n",
        "      <td>60.33</td>\n",
+       "      <td>60.51</td>\n",
+       "      <td>-</td>\n",
+       "      <td>62.01</td>\n",
+       "      <td>65.51</td>\n",
+       "      <td>62.95</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           dataset   topk  zero_shot\n",
-       "0           sun397  60.06      56.84\n",
-       "1              dtd  44.21      42.26\n",
-       "2   oxford_flowers  69.14      65.98\n",
-       "3          eurosat  42.58      37.51\n",
-       "4           ucf101  60.03      57.34\n",
-       "5       caltech101  87.26      83.98\n",
-       "6    stanford_cars  57.05      55.63\n",
-       "7          food101  75.07      74.82\n",
-       "8      oxford_pets  81.74      82.83\n",
-       "9             fgvc  16.44      17.10\n",
-       "10        imagenet  58.82      60.33"
+       "         dataset   topk  zero_shot    upl    svl    tip  tip-f   coop\n",
+       "0         SUN397  60.06      56.84  63.98  61.37  66.85  71.47  69.26\n",
+       "1            DTD  44.21      42.26  46.57   47.1  60.93  66.55  63.58\n",
+       "2     Flowers102  69.14      65.98  68.90  73.28  89.89  94.80  94.51\n",
+       "3        EuroSAT  42.58      37.51  54.83  66.28  70.54  84.54  83.53\n",
+       "4         UCF101  60.03      57.34  67.17   64.9  70.58  78.03  75.71\n",
+       "5     Caltech101  87.26      83.98  89.94  88.64  90.18  92.86  91.83\n",
+       "6   StanfordCars  57.05      55.63  62.13  50.27  66.77  75.74  73.36\n",
+       "7        Food101  75.07      74.82  77.58  78.43  77.83  79.43  74.67\n",
+       "8     OxfordPets  81.74      82.83  88.28   87.9  88.14  89.70  87.01\n",
+       "9   FGVCAircraft  16.44      17.10  17.34  12.42  29.76  35.55  31.26\n",
+       "10      ImageNet  58.82      60.33  60.51      -  62.01  65.51  62.95"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,7 +938,43 @@
     "concat_df = pd.merge(clip_search_df, zeroshot_df, on='dataset')\n",
     "concat_df = concat_df.round(2)\n",
     "\n",
+    "concat_df = pd.merge(concat_df, upl_results, how='left', on='dataset')\n",
+    "concat_df = pd.merge(concat_df, svl_results, how='left', on='dataset')\n",
+    "concat_df = pd.merge(concat_df, tip_adapter_results, how='left', on='dataset')\n",
+    "concat_df = pd.merge(concat_df, coop_results, how='left', on='dataset')\n",
+    "concat_df = concat_df.fillna('-')\n",
+    "\n",
+    "concat_df['dataset'] = concat_df['dataset'].apply(dataset_key_to_name.__getitem__)\n",
     "concat_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUN397 & 60.06 & 56.84 & 63.98 & 61.37 & 66.85 & 71.47 & 69.26\n",
+      "DTD & 44.21 & 42.26 & 46.57 & 47.1 & 60.93 & 66.55 & 63.58\n",
+      "Flowers102 & 69.14 & 65.98 & 68.9 & 73.28 & 89.89 & 94.8 & 94.51\n",
+      "EuroSAT & 42.58 & 37.51 & 54.83 & 66.28 & 70.54 & 84.54 & 83.53\n",
+      "UCF101 & 60.03 & 57.34 & 67.17 & 64.9 & 70.58 & 78.03 & 75.71\n",
+      "Caltech101 & 87.26 & 83.98 & 89.94 & 88.64 & 90.18 & 92.86 & 91.83\n",
+      "StanfordCars & 57.05 & 55.63 & 62.13 & 50.27 & 66.77 & 75.74 & 73.36\n",
+      "Food101 & 75.07 & 74.82 & 77.58 & 78.43 & 77.83 & 79.43 & 74.67\n",
+      "OxfordPets & 81.74 & 82.83 & 88.28 & 87.9 & 88.14 & 89.7 & 87.01\n",
+      "FGVCAircraft & 16.44 & 17.1 & 17.34 & 12.42 & 29.76 & 35.55 & 31.26\n",
+      "ImageNet & 58.82 & 60.33 & 60.51 & - & 62.01 & 65.51 & 62.95\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _, row in concat_df.iterrows():\n",
+    "    vals = map(str, dict(row).values())\n",
+    "    print(' & '.join(vals))"
    ]
   },
   {
